--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.google.gms:google-services:4.3.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,8 +22,9 @@ allprojects {
     }
 }
 
-def jme3 = [v:'3.3.2-stable', g:'org.jmonkeyengine']
-def jme3_android = [v:'3.3.0-alpha2', g:'org.jmonkeyengine']
+//def jme3 = [v:'3.3.2-stable', g:'org.jmonkeyengine']
+//def jme3_android = [v:'3.3.0-alpha2', g:'org.jmonkeyengine']
+def jme3 = [v:'3.4.0-stable', g:'org.jmonkeyengine']
 
 project(":lib7") {
     apply plugin: "com.android.library"
@@ -31,7 +32,8 @@ project(":lib7") {
     dependencies {
         implementation(name: 'lib_jm', ext: 'jar')
    //     implementation "${jme3.g}:jme3-core:${jme3.v}"
-        implementation "${jme3_android.g}:jme3-android-native:${jme3_android.v}"
+        //implementation "${jme3_android.g}:jme3-android-native:${jme3_android.v}"
+        implementation "${jme3.g}:jme3-android-native:${jme3.v}"
     }
 }
 
