--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 #
 #systemProp.http.proxyHost=10.48.0.64
 #systemProp.http.proxyPort=3128
