--- a/lib7/build.gradle
+++ b/lib7/build.gradle
@@ -1,22 +1,19 @@
 plugins {
     id 'com.android.library'
+
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 34
+    buildToolsVersion '34.0.0'
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
+        minSdk 23
+        targetSdk 34
 
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        versionNameSuffix '0'
 
 //        viewBinding {
 //            enabled = true
@@ -33,21 +30,40 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.yss1.lib7'
 }
 
 dependencies {
+    implementation(name: 'lib_jm', ext: 'jar')
+    implementation 'org.jmonkeyengine:jme3-android:'+jmonkeyengineVersion
+    implementation 'org.jmonkeyengine:jme3-android-native:'+jmonkeyengineVersion
+    implementation 'org.jmonkeyengine:jme3-core:'+jmonkeyengineVersion
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-database'
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+   // implementation 'com.google.android.gms:play-services-ads:23.5.0'
+
+
+        // Import the Firebase BoM
+        implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
+
+        // When using the BoM, you don't specify versions in Firebase library dependencies
+
+        // Add the dependency for the Firebase SDK for Google Analytics
+        implementation("com.google.firebase:firebase-analytics")
+
+        // TODO: Add the dependencies for any other Firebase products you want to use
+        // See https://firebase.google.com/docs/android/setup#available-libraries
+        // For example, add the dependencies for Firebase Authentication and Cloud Firestore
+        implementation("com.google.firebase:firebase-auth")
+        implementation("com.google.firebase:firebase-firestore")
+        implementation 'com.google.firebase:firebase-analytics'
+        implementation 'com.google.firebase:firebase-database'
+
+    //implementation 'com.google.android.gms:play-services-auth:21.2.0'
 }
