--- a/lib7/build.gradle
+++ b/lib7/build.gradle
@@ -27,8 +27,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_16
+        targetCompatibility JavaVersion.VERSION_16
     }
     namespace 'com.yss1.lib7'
 }
@@ -50,7 +50,7 @@ dependencies {
 
 
         // Import the Firebase BoM
-        implementation(platform("com.google.firebase:firebase-bom:33.15.0"))
+        implementation(platform("com.google.firebase:firebase-bom:33.16.0"))
 
         // When using the BoM, you don't specify versions in Firebase library dependencies
 
